<resources>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyD3Vez3SN4QkLyLygEp99ICZOLQvZuEhqE</string>
    <!--Kathis: AIzaSyAacqfRTKxheR4vOn-_HWyrKqg_qy0OJNE-->
    <!--Dalias hahah da passt was net xD: AIzaSyACNCPudG4uNbwUF1885rB_pk9Jl6KyJeg-->

    <string name="app_name">MEDiary</string>

    <string name="title_activity_login">MEDiary</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Das Passwort ist zu kurz</string>
    <string name="error_incorrect_password">Das Passwort ist nicht korrekt</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Allgemein</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>


    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <!--damit Fingerprint geht-->
    <string name="MEDiary">Fingerprint Authentication</string>
    <string name="instructions"> Place your fingertip on the Home button to verify your identity</string>

    <string name="hausapotheke">Hausapotheke</string>
    <string name="einstellungen">Einstellungen</string>
    <string name="regelm_einzunehmende_mediakmente">regelmäßig einzunehmende Medikamente</string>
    <string name="benutzerprofil">Benutzerprofil</string>
    <string name="apotheken_in_ihrer_naehe">Apotheken in Ihrer Nähe</string>
    <string name="Anzeige_Hausapotheke">Hier sehen Sie Ihre digitale Hausapotheke</string>
    <string name="title_activity_einstellungen">Einstellungen</string>
    <string name="e_mail">E-Mail:</string>
    <string name="passwort">Passwort:</string>
    <string name="anmelden">Anmelden</string>
    <string name="registrieren">Registrieren</string>
    <string name="schnellerer_login_mithilfe_des_fingerprints_auf_der_home_buttons">Schnellerer Login mithilfe des Fingerprints auf der Home-Buttons</string>

    <string name="Hausapotheke">TextViewText</string>
    <string name="hauptmenu">Hauptmenü</string>
    <string name="todo">TODO</string>
    <string name="welches_medikament_suchen_sie">welches Medikament suchen Sie?</string>
    <string name="title_activity_maps">Map</string>


</resources>


