<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.katharinafeiertag.mediary.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/ourBackgroundColor"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@android:dimen/thumbnail_height">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/tf_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Passwort:">

                <EditText
                    android:id="@+id/tf_password"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:hint="@string/passwort"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>

            <!--damit Fingerprint geht, auch bei Versionen die noch keinen haben-->
            <!--<uses-feature
                android:name="android.hardware.fingerprint"
                android:required="false"
                android:layout_width="wrap_content" />

            <uses-permission android:name="android.permission.USE_FINGERPRINT" />-->


            <Button
                android:id="@+id/bt_signin"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left|center_vertical|fill"
                android:layout_marginTop="16dp"
                android:gravity="top|center_horizontal"
                android:onClick="onAnmeldenClick"
                android:text="@string/anmelden"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!--<TextView
                android:id="@+id/textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />-->

            <!--<ImageView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--&lt;!&ndash;app:srcCompat="@drawable/fingerprint"&ndash;&gt;-->
            <!--android:id="@+id/imageView"-->
            <!--android:layout_below="@+id/textView"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_marginTop="36dp" />-->

            <Button
                android:id="@+id/bt_registrieren"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@android:drawable/ic_input_add"
                android:text="REGISTRIEREN"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lb_fingerprint"
                android:layout_width="wrap_content"
                android:layout_height="65dp"

                android:layout_marginTop="27dp"
                android:lineSpacingExtra="8sp"
                android:text="@string/schnellerer_login_mithilfe_des_fingerprints_auf_der_home_buttons"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textColorLink="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/fingerneu" />

        </LinearLayout>


    </ScrollView>
</RelativeLayout>
